--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@ const today = new Date();
 					></path>
 				</svg>
 			</a>
-		<a href="https://github.com/withastro/astro" target="_blank">
+		<a href="https://github.com/Martin-High-School-CSC/csc_website" target="_blank">
 			<span class="sr-only">View our website's source code on GitHub</span>
 			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" astro-icon="social/github"
 				><path
