--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 		<main>
 			<h1>MHS Computer Science Club</h1>
 			<p>
-				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt assumenda et nesciunt, itaque vitae magnam autem nam quo. Unde maxime aut inventore id esse hic, mollitia quasi at voluptates eaque!
+				Something great is coming soon!
 			</p>
 		</main>
 		<Footer />
