--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,12 +1,12 @@
 ---
-import { Image } from 'astro:assets';
-import { getCollection } from 'astro:content';
-import BaseHead from '../../components/BaseHead.astro';
-import Footer from '../../components/Footer.astro';
-import Header from '../../components/Header.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '../../consts';
+import { Image } from "astro:assets";
+import { getCollection } from "astro:content";
+import BaseHead from "../../components/BaseHead.astro";
+import Footer from "../../components/Footer.astro";
+import Header from "../../components/Header.astro";
+import { SITE_DESCRIPTION, SITE_TITLE } from "../../consts";
 
-const projects = (await getCollection('projects')).sort(
+const projects = (await getCollection("projects")).sort(
 	(a, b) => b.data.createdDate.valueOf() - a.data.createdDate.valueOf(),
 );
 ---
@@ -14,9 +14,14 @@ const projects = (await getCollection('projects')).sort(
 <!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead title={`${SITE_TITLE} — Projects`} description={SITE_DESCRIPTION} />
+		<BaseHead
+			title={`${SITE_TITLE} — Projects`}
+			description={SITE_DESCRIPTION}
+		/>
 		<style>
-			main { width: 960px; }
+			main {
+				width: 960px;
+			}
 			ul {
 				display: flex;
 				flex-wrap: wrap;
@@ -25,22 +30,61 @@ const projects = (await getCollection('projects')).sort(
 				margin: 0;
 				padding: 0;
 			}
-			ul li { width: calc(50% - 1rem); }
-			ul li * { text-decoration: none; transition: 0.2s ease; }
-			ul li:first-child { width: 100%; margin-bottom: 1rem; text-align: center; }
-			ul li:first-child img { width: 100%; }
-			ul li:first-child .title { font-size: 2.369rem; }
-			ul li img { margin-bottom: 0.5rem; border-radius: 12px; }
-			ul li a { display: block; }
-			.title { margin: 0; color: rgb(var(--black)); line-height: 1; }
-			.small { margin: 0; color: rgb(var(--gray)); }
-			ul li a:hover h4, ul li a:hover .small { color: rgb(var(--accent)); }
-			ul a:hover img { box-shadow: var(--box-shadow); }
+			ul li {
+				width: calc(50% - 1rem);
+			}
+			ul li * {
+				text-decoration: none;
+				transition: 0.2s ease;
+			}
+			ul li:first-child {
+				width: 100%;
+				margin-bottom: 1rem;
+				text-align: center;
+			}
+			ul li:first-child img {
+				width: 100%;
+			}
+			ul li:first-child .title {
+				font-size: 2.369rem;
+			}
+			ul li img {
+				margin-bottom: 0.5rem;
+				border-radius: 12px;
+			}
+			ul li a {
+				display: block;
+			}
+			.title {
+				margin: 0;
+				color: var(--text);
+				line-height: 1;
+			}
+			.small {
+				margin: 0;
+				color: var(--text-gray);
+			}
+			ul li a:hover h4,
+			ul li a:hover .small {
+				color: var(--accent);
+			}
+			ul a:hover img {
+				box-shadow: var(--box-shadow);
+			}
 			@media (max-width: 720px) {
-				ul { gap: 0.5em; }
-				ul li { width: 100%; text-align: center; }
-				ul li:first-child { margin-bottom: 0; }
-				ul li:first-child .title { font-size: 1.563em; }
+				ul {
+					gap: 0.5em;
+				}
+				ul li {
+					width: 100%;
+					text-align: center;
+				}
+				ul li:first-child {
+					margin-bottom: 0;
+				}
+				ul li:first-child .title {
+					font-size: 1.563em;
+				}
 			}
 		</style>
 	</head>
@@ -49,19 +93,36 @@ const projects = (await getCollection('projects')).sort(
 		<main transition:animate="fade">
 			<section>
 				<ul>
-					{projects.map((p) => (
-						<li>
-							<a href={`/projects/${p.id}/`}>
-								{p.data.heroImage && (typeof p.data.heroImage === 'string' ? (
-									<img width="720" height="360" src={p.data.heroImage} alt="" loading="lazy" transition:name={`post-image-${p.data.title}`} />
-								) : (
-									<Image width={720} height={360} src={p.data.heroImage} alt="" transition:name={`post-image-${p.data.title}`} />
-								))}
-								<h4 class="title">{p.data.title}</h4>
-								<p class="small">{p.data.description}</p>
-							</a>
-						</li>
-					))}
+					{
+						projects.map((p) => (
+							<li>
+								<a href={`/projects/${p.id}/`}>
+									{p.data.heroImage &&
+										(typeof p.data.heroImage ===
+										"string" ? (
+											<img
+												width="720"
+												height="360"
+												src={p.data.heroImage}
+												alt=""
+												loading="lazy"
+												transition:name={`post-image-${p.data.title}`}
+											/>
+										) : (
+											<Image
+												width={720}
+												height={360}
+												src={p.data.heroImage}
+												alt=""
+												transition:name={`post-image-${p.data.title}`}
+											/>
+										))}
+									<h4 class="title">{p.data.title}</h4>
+									<p class="small">{p.data.description}</p>
+								</a>
+							</li>
+						))
+					}
 				</ul>
 			</section>
 		</main>
