--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -50,7 +50,7 @@ const projects = (await getCollection("projects")).sort(
 			}
 			ul li img {
 				margin-bottom: 0.5rem;
-				border-radius: 12px;
+				border-radius: var(--border-radius);
 			}
 			ul li a {
 				display: block;
