--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -26,7 +26,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			.hero-image img {
 				display: block;
 				margin: 0 auto;
-				border-radius: 12px;
+				border-radius: var(--border-radius);
 				box-shadow: var(--box-shadow);
 			}
 			.prose {
