--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -48,7 +48,7 @@ const posts = (await getCollection('blog')).sort(
 			}
 			ul li img {
 				margin-bottom: 0.5rem;
-				border-radius: 12px;
+				border-radius: var(--border-radius);
 			}
 			ul li a {
 				display: block;
